Changed homepage of gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://omarkarame.github.io/crypto-currency-api/",
+  "homepage": "https://omarkarame.github.io/crypto-currency-api/public/",
   "name": "crypto-currency-api",
   "version": "0.1.0",
   "private": true,
